# valuation_analyst

./: .env.example  .gitignore  CLAUDE.md  README.md  checklist.md  prompt_log.md  pyproject.toml
.claude/agents/: cost-of-capital.md  dcf-analyst.md  ma-analyst.md  option-pricing.md  orchestrator.md  private-valuation.md  relative-analyst.md  risk-analyst.md
.claude/commands/: checklist.md  demo.md  status.md
configs/: GOOGL.json  ORCL.json  RBLX.json  _template.json
data/logs/: prompt_log.md
data/samples/: apple_financials.json  sample_comparables.json
demos/: 01_cost_of_capital.py  02_dcf_valuation.py  03_comparable_analysis.py  04_option_pricing.py  05_private_valuation.py  06_ma_synergy.py  07_sensitivity_analysis.py  08_full_report.py  README.md
docs/: agent_guide.md  architecture.md  articolo_paper.md  data_sources.md  demo_walkthrough.md  methodology.md  project_evaluation.md
output/markdown/: AAPL_2026-03-18_valuation.md  ORCL_2026-03-18_valuation.md  RBLX_2026-03-18_valuation.md
report/: AAPL_valuation_report_2026-02-19.md  GOOGL_valuation_report_2026-02-19.md  MSFT_valuation_report_2026-02-19.md
scripts/: fetch_dati.py  md_to_pdf.py  run_analysis.py  run_googl_analysis.py  run_msft_analysis.py
scripts/configs/: AAPL.json  MSFT.json
tests/: conftest.py
tests/integration/: test_damodaran_data.py  test_dcf_workflow.py  test_full_valuation.py  test_relative_workflow.py
tests/unit/: test_beta_estimation.py  test_black_scholes.py  test_capm.py  test_control_premium.py  test_dcf_fcfe.py  test_dcf_fcff.py  test_equity_as_option.py  test_wacc.py  (+12 more)
(+71 files in other folders)
